--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1568,10 +1568,10 @@ it:
   field_username_as_email: "Di default la tua login è uguale alla tua email. Hai la possibilità di personalizzare il tuo nome utente che userai con la password per identificarti sul sito"
   field_codice_segnalatore: "Codice Segnalatore/Promozione:"
   field_com: "Comunicazioni/Segnalazioni:"
-  field_privacy: "Informativa sulla privacy"
-  field_privacy_accept: "Accetto l'informativa sulla privacy"
-  field_condition: "Condizioni di utilizzo"
-  field_condition_readed: "Ho letto le condizioni per l'uso"
+  field_se_privacy: "Informativa sulla privacy"
+  field_se_privacy_accept: "Accetto l'informativa sulla privacy"
+  field_se_condition: "Condizioni di utilizzo"
+  field_se_condition_readed: "Ho letto le condizioni per l'uso"
  # user_profiles
  # field_curriculum: 'Curriculum'
   label_curriculum: 'il Curriculum'
