--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -198,7 +198,7 @@ en:
   notice_issue_done_ratios_updated: Issue done ratios updated.
   notice_gantt_chart_truncated: "The chart was truncated because it exceeds the maximum number of items that can be displayed (%{max})"
   notice_issue_successful_create: "Issue %{id} created."
-  #Verificare Dom  
+  #Verificare Dom
   notice_user_not_found: "L'utente ricercato, con id %{id}, non esiste o è stato eliminato."
   notice_ensure_identifier: "Attenzione: abbiamo provato ad impostare in automatico l'identificatore dell'edizione. Verifica che non sia veramente univoco prima di continuare. Usi la lista delle ultime edizioni registrate"
   notice_failed_to_save_abbonamento: "Impossibile salvare l'abbonamento per l'utente(i): %{errors}."
@@ -226,7 +226,7 @@ en:
   error_unable_to_connect: "Unable to connect (%{value})"
   error_attachment_too_big: "This file cannot be uploaded because it exceeds the maximum allowed file size (%{max_size})"
   warning_attachments_not_saved: "%{count} file(s) could not be saved."
-  #Verificare Dom  
+  #Verificare Dom
   error_none_assigned: "Dovete selezionare almeno un elemento dalla lista."
   error_can_not_remove_role_for_fee_management: Questo ruolo è in uso nella gestione degli abbonamenti e non può essere eliminato.
 
@@ -618,6 +618,8 @@ en:
   label_fast_reply: Rispondi senza generare articolo
   no_reply_actualy: Nessuna risposta attualmente
   label_news_my: I miei quesiti
+  label_no_referente: No referee
+  label_no_soci: No one associated
 
 
   label_settings: Settings
@@ -1115,6 +1117,7 @@ en:
   label_asso_full: Categoria Utente
   label_asso_plural: Cat. Utenti
   label_asso_new: Nuova categoria utente
+  label_assos_users: Utenti soci
 
   field_cross_group: Banner utente
   #label_cross_group: Banner utente
