--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1355,6 +1355,13 @@ en:
   label_localizazzione: Indirizzo
   label_account: Credenziali
   label_registration: Dati di registrazione
+  label_scadenza_ruolo: Gestione Ruolo <--> Scadenza
+  label_is_referente: è referente? (resp.)
+  label_gest_privato: Privato == Pagante
+  label_gest_organismo: Organismo == Pagante
+  label_assos_referee: Responsabili organismi
+  label_assos_referee_help: Lista dei referenti di organismi associato
+  label_no_referee: Nessun responsabile trovato
 
   field_codice: (old) Codice
   field_pwd: (old) Password
