--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1266,6 +1266,7 @@ en:
   label_presidente: Presidente
   label_referente: Referente
   label_consulente: Consulente
+  label_manager: Responsabile
   label_logo: Logo
   label_telefono: Telefono
   label_telefono_alt: Telefono alternativo
@@ -1279,6 +1280,7 @@ en:
   field_presidente: Presidente
   field_referente: Referente
   field_consulente: Consulente
+  field_manager: Responsabile
   field_logo: Logo
   field_telefono: Telefono
   field_telefono_alt: Telefono alternativo
@@ -1347,7 +1349,8 @@ en:
   label_users: Utenti
   label_user_invoices: "Altre fatture legate all'utente"
   label_organization_user_asso: Referenti org. asso correlati
-  label_cross_organization_user_asso: Sigla utente
+  label_cross_organization_user_asso: "Sigla: lista utenti federati"
+  label_cross_organization_user_asso_none: nessun utente registrato per questa federazione
   label_asso_organization: Organismo associato
   label_asso_organization_none: Nessun organismo associato
 
