--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1155,8 +1155,10 @@ it:
   label_no_organization: "L'utente non fa parte di un organismo associato"
   label_is_responsable: é responsabile?
   label_not_responsable: "L'utente non gestisce organismi associati"
-  label_have_asso: Cat. Utente
-  label_no_asso: "L'utente non fa parte di un organismo associato"
+  label_have_asso: Cat. Utente?
+  label_no_asso: "L'utente non fa parte di un'associazione"
+  label_list_responsable_for: "Lista organismi dove é responsabile:"
+
   label_have_sigla_tipo: Sigla
   label_no_sigla_tipo: "L'utente non fa parte di una sigla organismo"
 
@@ -1272,6 +1274,7 @@ it:
   label_presidente: Presidente
   label_referente: Referente
   label_consulente: Consulente
+  label_manager: Responsabile
   label_logo: Logo
   label_telefono: Telefono
   label_telefono_alt: Telefono alternativo
@@ -1285,6 +1288,7 @@ it:
   field_presidente: Presidente
   field_referente: Referente
   field_consulente: Consulente
+  field_manager: Responsabile
   field_logo: Logo
   field_telefono: Telefono
   field_telefono_alt: Telefono alternativo
@@ -1353,7 +1357,8 @@ it:
   label_users: Utenti
   label_user_invoices: "Altre fatture legate all'utente"
   label_organization_user_asso: Referenti org. asso correlati
-  label_cross_organization_user_asso: Sigla utente
+  label_cross_organization_user_asso: "Sigla: lista utenti federati"
+  label_cross_organization_user_asso_none: nessun utente registrato per questa federazione
   label_asso_organization: Organismo associato
   label_asso_organization_none: Nessun organismo associato
 
