send newsletter only preview

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1656,3 +1656,4 @@ en:
   label_send_newsletter: Invia quindicinale
   button_send_newsletter: Invia quindicinale
   label_user_list_newsletters: "Storico degli invii precedenti"
+  label_newsletter: Quindicinale
