--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1663,3 +1663,4 @@ it:
   label_send_newsletter: Invia quindicinale
   button_send_newsletter: Invia quindicinale
   label_user_list_newsletters: "Storico degli invii precedenti"
+  label_newsletter: Quindicinale
