--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,6 +244,8 @@ en:
   mail_body_wiki_content_added: "The '%{id}' wiki page has been added by %{author}."
   mail_subject_wiki_content_updated: "'%{id}' wiki page has been updated"
   mail_body_wiki_content_updated: "The '%{id}' wiki page has been updated by %{author}."
+  mail_subject_newsletter: "%{compagny}: %{edizione} del %{date}"
+  notice_user_newsletter_email_sent: "Quindicinale %{edizione} del %{date} inviato a %{user}"
 
   gui_validation_error: 1 error
   gui_validation_error_plural: "%{count} errors"
