--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -248,6 +248,8 @@ it:
   mail_body_wiki_content_added: La pagina '%{id}' è stata aggiunta al wiki da %{author}.
   mail_subject_wiki_content_updated: "La pagina wiki '%{id}' è stata aggiornata"
   mail_body_wiki_content_updated: La pagina '%{id}' wiki è stata aggiornata da%{author}.
+  mail_subject_newsletter: "%{compagny}: %{edizione} del %{date}"
+  notice_user_newsletter_email_sent: "Quindicinale %{edizione} del %{date} inviato a %{user}"
 
   gui_validation_error: 1 errore
   gui_validation_error_plural: "%{count} errori"
