--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -944,6 +944,7 @@ en:
   button_show: Show
   button_edit_section: Edit this section
   button_export: Export
+  button_prova: Leggi Gratis!
 
 #dom verify
   button_save_abbonamento: Salva abbonamento
