--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -948,6 +948,7 @@ it:
   button_show: Mostra
   button_edit_section: Modifica questa sezione
   button_export: Esporta
+  button_prova: Leggi Gratis!
 
 #dom verify
   button_save_abbonamento: Salva abbonamento
