--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1219,49 +1219,49 @@ en:
   field_flag3: Flag 3
 
 #top_section
-  label_top_section: Sezione
-  field_top_section: Sezione
-  label_top_section_plural: Sezioni
-  label_top_section_plural_from_menu: Sezioni che dipendono del menu
-  label_top_section_new: Nuova Sezione
+  label_top_section: Categoria
+  field_top_section: Categoria
+  label_top_section_plural: Categorie
+  label_top_section_plural_from_menu: Categorie che dipendono del menu
+  label_top_section_new: Nuova Categoria
   label_ordinamento: Ord.
   label_se_visibile: Visibile?
   label_se_visibile_menu_arts: Visibile nel menu articoli?
   label_immagine: immagine
   label_style: style
   label_key: Chiave
-  field_sezione_top: Descrizione Sezione
+  field_sezione_top: Descrizione Categoria
   field_ordinamento: Ordinamento
   field_se_visibile: Visibile
   field_immagine: Immagine
   field_style: Foglio di stile
-  field_key: chiave
-  notice_top_section_successful_create: Sezione %{id} creata
-  error_can_not_delete_topsection_unless_sections: "Non è possibile eliminare una sezione a lei sono legate dellle sotto sezione..."
+  field_key: Chiave
+  notice_top_section_successful_create: Categoria %{id} creata
+  error_can_not_delete_topsection_unless_sections: "Non è possibile eliminare una categoria a lei sono legate dellle sezione..."
 #top_menu
-  label_top_menu: menu
+  label_top_menu: Menu
   label_top_menu_plural: lista dei menu
   label_top_menu_new: Nuovo menu
   field_top_menu: menu
   error_can_not_delete_top_menu_unless_topsections: "Non è possibile eliminare un menu finchè è associato ad sezioni top..."
   error_can_not_delete_system: "Non è possibile eliminare %{name}, perchè serve come default al sistema. Solo modifica accettata. "
 #section
-  label_section: Sotto sezione
-  field_section: Sotto sezione
-  label_section_plural: Sotto sezioni
-  label_section_new: Nuova sotto sezione
+  label_section: Sezione
+  field_section: Sezione
+  label_section_plural: Sezioni
+  label_section_new: Sezione
   label_protetto: Privato
-  error_can_not_delete_section_unless_issues: "Non è possibile eliminare una sotto sezione finchè è legata a degli articoli..."
-  label_sections_from_top_section: "Sotto sezioni legate alla sezione "
-# asso (Categoria utente) e group_banner (Banner) sono associati tramite cross_group (banner utente)
-# asso (Categoria utente) ha tanti utenti
-# asso ha uno (o più) Organismi Associati NON ha asso.organization_id?
-  field_asso: Categoria utente
-  label_asso: Cat. Utente
-  label_asso_plural: Categorie utenti
-  label_asso_new: Nuova categoria utente
-  label_asso_associated_group_banner: Banner associati
-  label_asso_associated_group_banner_none: Nessun banner associato
+  error_can_not_delete_section_unless_issues: "Non è possibile eliminare una sezione finchè è legata a degli articoli..."
+  label_sections_from_top_section: "Sezioni legate alla categoria "
+ # asso (Categoria utente) e group_banner (Banner) sono associati tramite cross_group (banner utente)
+ # asso (Categoria utente) ha tanti utenti
+ # asso ha uno (o più) Organismi Associati NON ha asso.organization_id?
+  field_asso: Associazione
+  label_asso: Associazione
+  label_asso_plural: Associazioni aderenti
+  label_asso_new: Nuova associazione aderente
+  label_asso_associated_group_banner: Banner di associazioni
+  label_asso_associated_group_banner_none: Nessun banner associazioni
 
   label_ragione_sociale: Ragione sociale
   label_email: Email
