--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1122,15 +1122,15 @@ it:
 # asso (Categoria utente) e group_banner (Banner) sono associati tramite cross_group (banner utente)
 # asso (Categoria utente) ha tanti utenti
   #label_asso: Socio
-  label_asso: Cat. Utente
-  label_asso_full: Categoria Utente
-  label_asso_plural: Cat. Utenti
-  label_asso_new: Nuova categoria utente
+  label_asso: Associazioni
+  label_asso_full: Associazioni aderenti
+  label_asso_plural: Associasioni
+  label_asso_new: Nuova associazione aderente
   label_assos_users: Utenti soci
 
   field_cross_group: Banner utente
   #label_cross_group: Banner utente
-  label_cross_group: <- Cat.-Banner ->
+  label_cross_group: Asso. Banner
   label_cross_group_plural: Banner Utenti
   label_cross_group_new: Nuovo banner per utente
 
@@ -1144,13 +1144,13 @@ it:
 
 # asso (Categoria utente) ha tanti organismi
 #Organismo associato collegato a type_organization, asso, e sigla
-  label_organization: Org. associato
-  label_organization_plural: Org. asso.
-  label_organization_new: Nuovo organismo associato
-  label_organization_plural_long: Organismo associato
+  label_organization: Asso. Dati
+  label_organization_plural: Asso. dati
+  label_organization_new: Nuovo associazione dati
+  label_organization_plural_long: Organismi associati  dati
 
-  label_type_organization: Org. tipo
-  label_type_organization_plural: Org. tipi
+  label_type_organization: Org. Tipo
+  label_type_organization_plural: Org. Tipi
   label_type_organization_new: Nuovo tipo di organismo
   label_type_organization_plural_long: Tipi di organismo
 
@@ -1165,21 +1165,21 @@ it:
   label_have_sigla_tipo: Sigla
   label_no_sigla_tipo: "L'utente non fa parte di una sigla organismo"
 
-  #label_cross_organization: Sigla
-  label_cross_organization: <- Sigla ->
-  label_cross_organization_plural: Sigle
-  label_cross_organization_new: Nuova sigla
-  label_other_cross_organization_sametype: Altre sigle correlate
-  label_other_organization_sametype: Altre organismi associati correlati
-  label_other_organization_none: Nessun organismo associato
+  #label_cross_organization: ex Sigla
+  label_cross_organization: Organismo
+  label_cross_organization_plural: Organizzazioni
+  label_cross_organization_new: Nuova organizzazione
+  label_other_cross_organization_sametype: Altre organizzazioni correlate
+  label_other_organization_sametype: Altre organizzazioni correlati
+  label_other_organization_none: Nessuna organizzazione associata
 
   label_tipo: "Tipo dell'organismo"
   label_descrizione: Descrizione
   label_organizzazione: Organizzazione
   label_sigla: Sigla
-  label_type_organization: Tipo organizzazione
+  label_type_organization: Org. Tipo
 
-  field_tipo: "Tipo dell'organismo"
+  field_tipo: "Tipo di organismo"
   field_descrizione: Descrizione
   field_organizzazione: Organizzazione
   field_sigla: Sigla
@@ -1227,49 +1227,49 @@ it:
   field_flag3: Flag 3
 
 #top_section
-  label_top_section: Sezione
-  field_top_section: Sezione
-  label_top_section_plural: Sezioni
-  label_top_section_plural_from_menu: Sezioni che dipendono del menu
-  label_top_section_new: Nuova Sezione
+  label_top_section: Categoria
+  field_top_section: Categoria
+  label_top_section_plural: Categorie
+  label_top_section_plural_from_menu: Categorie che dipendono del menu
+  label_top_section_new: Nuova Categoria
   label_ordinamento: Ord.
   label_se_visibile: Visibile?
   label_se_visibile_menu_arts: Visibile nel menu articoli?
   label_immagine: immagine
   label_style: style
   label_key: Chiave
-  field_sezione_top: Descrizione Sezione
+  field_sezione_top: Descrizione Categoria
   field_ordinamento: Ordinamento
   field_se_visibile: Visibile
   field_immagine: Immagine
   field_style: Foglio di stile
-  field_key: chiave
-  notice_top_section_successful_create: Sezione %{id} creata
-  error_can_not_delete_topsection_unless_sections: "Non è possibile eliminare una sezione a lei sono legate dellle sotto sezione..."
+  field_key: Chiave
+  notice_top_section_successful_create: Categoria %{id} creata
+  error_can_not_delete_topsection_unless_sections: "Non è possibile eliminare una categoria a lei sono legate dellle sezione..."
 #top_menu
-  label_top_menu: menu
-  label_top_menu_plural: lista dei menu
-  label_top_menu_new: Nuovo menu
-  field_top_menu: menu
+  label_top_menu: Menu
+  label_top_menu_plural: i menu  dei contenuti
+  label_top_menu_new: Nuovo menu contenuti
+  field_top_menu: Menu contenuti
   error_can_not_delete_top_menu_unless_topsections: "Non è possibile eliminare un menu finchè è associato ad sezioni top..."
   error_can_not_delete_system: "Non è possibile eliminare %{name}, perchè serve come default al sistema. Solo modifica accettata. "
 #section
-  label_section: Sotto sezione
-  field_section: Sotto sezione
-  label_section_plural: Sotto sezioni
-  label_section_new: Nuova sotto sezione
+  label_section: Sezione
+  field_section: Sezione
+  label_section_plural: Sezioni
+  label_section_new: Sezione
   label_protetto: Privato
-  error_can_not_delete_section_unless_issues: "Non è possibile eliminare una sotto sezione finchè è legata a degli articoli..."
-  label_sections_from_top_section: "Sotto sezioni legate alla sezione "
+  error_can_not_delete_section_unless_issues: "Non è possibile eliminare una sezione finchè è legata a degli articoli..."
+  label_sections_from_top_section: "Sezioni legate alla categoria "
 # asso (Categoria utente) e group_banner (Banner) sono associati tramite cross_group (banner utente)
 # asso (Categoria utente) ha tanti utenti
 # asso ha uno (o più) Organismi Associati NON ha asso.organization_id?
-  field_asso: Categoria utente
-  label_asso: Cat. Utente
-  label_asso_plural: Categorie utenti
-  label_asso_new: Nuova categoria utente
-  label_asso_associated_group_banner: Banner associati
-  label_asso_associated_group_banner_none: Nessun banner associato
+  field_asso: Associato
+  label_asso: Associato
+  label_asso_plural: Associazioni aderenti
+  label_asso_new: Nuova associazione aderente
+  label_asso_associated_group_banner: Banner di associazioni
+  label_asso_associated_group_banner_none: Nessun banner associazioni
 
   label_ragione_sociale: Ragione sociale
   label_email: Email
