--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1421,6 +1421,10 @@ it:
   field_crediti: (old) Credito
   field_annotazioni: (old) Annotazioni
 
+  field_image_file_name: Nome del file
+  field_image_content_type: Tipo file
+  field_image_file_size: Taglia file
+  field_image_updated_at: Data-ora file
 
 #Permission
   permission_access_back_end: Accedi al backEnd?
