--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1644,6 +1644,9 @@ it:
   notice_missing_parameters: La pagina non puo essere caricata per mancanza di informazione
   orderedby_updated_desc: Ordinamento per data di ultimo salvataggio decrescente
   orderedby_created_desc: Ordinamento per data di creazione decrescente
+  content_articolo: "Contenuto dell'articolo"
+  preview_fs_issue_abrv: "Vista abbonato"
+  preview_fs_issue: "Vedi articolo lato pubblico"
 
 #notice_email_sent: "Una email è stata spedita a %{value}"
   unauthorized: Non autorizzato ad accedere al contenuto
