added contattaci e risoluzioni

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1463,10 +1463,12 @@ en:
   label_condition: "Documento che definisce le condizioni d'uso"
   setting_iscription: "Modalità per abbonarsi"
   label_iscription: "Documento che elenca le modalità e i passi per l'iscrizione"
-  # static pages memorized in: settings/_projects
-  static_page_cosaoffriamo: "Page -> Cosa Offriamo"
-  static_page_lavoraconnoi: "Page -> Lavora con Noi"
-  static_page_progettofs: "Page -> Progetto Fiscosport"
+
+#Static pages in FE memorized in: settings/_projects
+  static_page_cosaoffriamo: "Pagina -> Cosa Offriamo"
+  static_page_lavoraconnoi: "Pagina -> Lavora con Noi"
+  static_page_progettofs: "Pagina -> Progetto Fiscosport"
+  static_page_contattaci: "Pagina -> Contattaci"
 
 #Deliver_fee  type
   proposal: Abbonamenti disponibili
