--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1308,7 +1308,7 @@ it:
   label_impressions: Impressions
   label_clicks: Clicks
   label_didascalia: Didascalia
-  label_se_prima_pagina: promosso in prima pagina
+  label_se_prima_pagina: In prima pagina?
   label_se_prenotazione: Gestione convegno?
   label_impressions_history: Storico impressione
 
@@ -1321,7 +1321,7 @@ it:
   field_impressions: Impressions
   field_clicks: Clicks
   field_didascalia: Didascalia
-  field_se_prima_pagina: promosso in prima pagina
+  field_se_prima_pagina: In prima pagina?
   field_se_prenotazione: Gestione convegno?
   field_impressions_history: Storico impressione
 
