--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -483,7 +483,7 @@ it:
   permission_export_wiki_pages: Esporta pagine wiki
   permission_manage_subtasks: Gestisci sottoattività
 
-  project_module_issue_tracking: Tracking degli articoli
+  project_module_issue_tracking: Articoli
   project_module_time_tracking: Time tracking
   project_module_news: Quesiti
   project_module_documents: Documenti
