--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -250,7 +250,7 @@ en:
 
   gui_validation_error: 1 error
   gui_validation_error_plural: "%{count} errors"
-
+  field_id: 'num#'
   field_name: Name
   field_description: Description
   field_summary: Summary
