--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1344,6 +1344,7 @@ it:
   field_prezzo: Prezzo
   field_msg: Messaggio
   label_other_reservation_plural_from_issue: Altre prenotazioni per questo convegno
+  label_allegati: Allegati
 
 #ISSUE --> ATTIVITA
   label_se_visible_web: Visibile Web?
