--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1700,3 +1700,7 @@ it:
   label_sended: 'email inviata'
   label_html: 'testo del messaggio'
   label_data: 'data invio'
+  label_newsletter_none: "Nessun invio fatto a questo giorno"
+  field_abbonamento: "Abbonamento"
+  field_abbonamento_type: "Tipo abbonamento"
+  field_user_fee: "Abbonato"
