--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1256,6 +1256,9 @@ en:
   label_convention_group_banner_none: Nessun banner per la convenzione (organismo associato)
   label_convention_pact: "Federazione<br />Zona"
   label_convention_ref: "Scadenza<br />responsabile"
+  label_convention_organismo: Organismo sportivo associato
+  label_convention_societa: Società non sportiva
+  label_convention_type: Tipo organismo
 
   label_ragione_sociale: Ragione sociale
   label_email: Email
@@ -1366,7 +1369,7 @@ en:
   label_scadenza_ruolo: Gestione Ruolo <--> Scadenza
   label_is_referente: è responsabile?
   label_gest_privato: Privato == Pagante
-  label_gest_organismo: Organismo associato == Utente non paga
+  label_gest_organismo: Organismo associato o società non sportiva == Utente NON paga
   label_conventions_referee: Responsabili degli organismi convenzionati
   label_conventions_referee_help: Lista dei responsabili
   label_no_referee: Nessun responsabile trovato
@@ -1665,6 +1668,12 @@ en:
   fs_qualifica: 'Qualifica o ruolo su Fiscosport (apparirà negli articoli)'
   notice_register_must_condition: "Dovete dichiarare di avere letto le condizioni d'uso per continuare"
   notice_register_must_consensus: "É necessario dare il consenso per la privacy"
+
+#SCADENZA STATO
+  stato_scadenza: "Stato abbonamento alla scadenza"
+  state_valid: "<span style='color: green; font-weight: bold;'>Abbonamento valido</span>"
+  state_expiring: "<span style='color: orange; font-weight: bold;'>L'abbonamento scadere</span>"
+  state_expired: "<span style='color: red; font-weight: bold;'>Abbonamento SCADUTO</span>"
 
 #EMAIL NEWSLETTER
   label_send_newsletter: Invia quindicinale
